--- a/Source/Inixe.InixDialogs.Tests/Inixe.InixDialogs.Tests.csproj
+++ b/Source/Inixe.InixDialogs.Tests/Inixe.InixDialogs.Tests.csproj
@@ -25,6 +25,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -33,6 +35,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -50,9 +53,16 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="DefaultMediatorTests.cs" />
     <Compile Include="FileIconResolverTests.cs" />
     <Compile Include="InixDialogsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Inixe.InixDialogs\Inixe.InixDialogs.csproj">
+      <Project>{c0000733-1e4b-4eb5-9f1a-c5c2dd094ed8}</Project>
+      <Name>Inixe.InixDialogs</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
