--- a/Source/Inixe.InixDialogs.Demo/Inixe.InixDialogs.Demo.csproj
+++ b/Source/Inixe.InixDialogs.Demo/Inixe.InixDialogs.Demo.csproj
@@ -53,6 +53,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Support\OperationCommand.cs" />
+    <Compile Include="ViewModel\MessageBoxDemoViewModel1.cs" />
+    <Compile Include="View\MessageBoxDemoView1.xaml.cs">
+      <DependentUpon>MessageBoxDemoView1.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -65,6 +70,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\MessageBoxDemoView1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -95,8 +104,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Model\" />
-    <Folder Include="ViewModel\" />
-    <Folder Include="View\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Inixe.InixDialogs\Inixe.InixDialogs.csproj">
+      <Project>{c0000733-1e4b-4eb5-9f1a-c5c2dd094ed8}</Project>
+      <Name>Inixe.InixDialogs</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
