--- a/Source/Inixe.InixDialogs/Inixe.InixDialogs.csproj
+++ b/Source/Inixe.InixDialogs/Inixe.InixDialogs.csproj
@@ -66,6 +66,7 @@
     <Compile Include="IShowDialogEvents.cs" />
     <Compile Include="MessageBoxDialog.cs" />
     <Compile Include="MessageBoxDialogSettings.cs" />
+    <Compile Include="MessageBoxHelper.cs" />
     <Compile Include="NullDialogMediator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShowEventArgs.cs" />
@@ -90,4 +91,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <Target Name="AfterBuild" Condition="'$(Configuration)|$(Platform)' == 'Package Publish|AnyCPU'">
+    <!--<Exec Command="..\.nuget\nuget.exe">-->
+  </Target>
 </Project>
