--- a/Source/Inixe.InixDialogs/Inixe.InixDialogs.csproj
+++ b/Source/Inixe.InixDialogs/Inixe.InixDialogs.csproj
@@ -62,13 +62,23 @@
     <Compile Include="FileInfoViewModel.cs" />
     <Compile Include="IDialogMediator.cs" />
     <Compile Include="InputBoxDialog.cs" />
-    <Compile Include="IRelayMediator.cs" />
-    <Compile Include="IShowDialogEvents.cs" />
+    <Compile Include="IDialogMediatorController.cs" />
+    <Compile Include="IDialogController.cs" />
     <Compile Include="MessageBoxDialog.cs" />
     <Compile Include="MessageBoxDialogSettings.cs" />
     <Compile Include="MessageBoxHelper.cs" />
     <Compile Include="NullDialogMediator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.es-MX.Designer.cs">
+      <DependentUpon>Resources.es-MX.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="ShowEventArgs.cs" />
     <Compile Include="SimpleDialogMediator.cs" />
     <Compile Include="Utils.cs" />
@@ -76,9 +86,18 @@
   <ItemGroup>
     <None Include="Inixe.InixDialogs.nuspec" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Page Include="Templates\MessageBoxDialogTemplate.xaml">
+    <EmbeddedResource Include="Properties\Resources.es-MX.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.es-MX.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Themes\Generic.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
