--- a/Source/Inixe.InixDialogs/Inixe.InixDialogs.csproj
+++ b/Source/Inixe.InixDialogs/Inixe.InixDialogs.csproj
@@ -64,6 +64,7 @@
     <Compile Include="InputBoxDialog.cs" />
     <Compile Include="IDialogMediatorController.cs" />
     <Compile Include="IDialogController.cs" />
+    <Compile Include="IntToThicknessConverter.cs" />
     <Compile Include="MessageBoxDialog.cs" />
     <Compile Include="MessageBoxDialogSettings.cs" />
     <Compile Include="MessageBoxHelper.cs" />
@@ -88,11 +89,11 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.es-MX.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.es-MX.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
